--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
+    "fastapi-dev": "pip install -r requirements.txt && python -m uvicorn --app-dir api index:app --reload",
     "next-dev": "next dev",
     "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "build": "next build",
@@ -21,7 +21,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.331.0",
-    "next": "13.4.4",
+    "next": "^14.1.0",
     "pnpm": "^8.15.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
