--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -32,10 +33,12 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.22.4"
   }
 }
