--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316-pooler.ap-southeast-1.aws.neon.tech/mlm?sslmode=require"
+DB_URI="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316-pooler.ap-southeast-1.aws.neon.tech/mlm-project?sslmode=require"
