--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URI="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316-pooler.ap-southeast-1.aws.neon.tech/db-new?sslmode=require"
+DB_URL="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316-pooler.ap-southeast-1.aws.neon.tech/mlm-db?sslmode=require"
