--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316-pooler.ap-southeast-1.aws.neon.tech/db-r?sslmode=require"
+DB_URL2="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316-pooler.ap-southeast-1.aws.neon.tech/profit3?sslmode=require"
