updated all data

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL2="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316-pooler.ap-southeast-1.aws.neon.tech/profit3?sslmode=require"
+DB_URL1="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm4?sslmode=require"
