--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.331.0",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
+    "node-cron": "^3.0.3",
     "pnpm": "^8.15.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
