--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL2="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm5?sslmode=require"
+DB_URL="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm?sslmode=require"
