--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "lucide-react": "^0.331.0",
     "moment": "^2.30.1",
     "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "node-cron": "^3.0.3",
     "pnpm": "^8.15.2",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
