--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@remixicon/react": "^4.2.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@tremor/react": "^3.14.1",
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
@@ -50,6 +51,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node-cron": "^3.0.11"
+    "@types/node-cron": "^3.0.11",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2"
   }
 }
