created update backend

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-DB_URL4="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm?sslmode=require"
+DB_URL="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm01?sslmode=require"
