--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "concurrently": "^8.0.1",
     "cookies-next": "^4.2.1",
+    "embla-carousel-react": "^8.1.8",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.331.0",
