--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node-cron": "^3.0.11",
+    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.6.2"
   }
