--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-DB_URL="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm2?sslmode=require"
+DB_URL="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southeast-1.aws.neon.tech/n?sslmode=require"
