--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 
 DB_URL="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southeast-1.aws.neon.tech/n?sslmode=require"
+
+
+
+NEXTAUTH_URL = "http://localhost:3000/api/auth"
