--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_URL="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southe
 
 
 NEXTAUTH_URL = "http://localhost:3000/api/auth"
+
+NEXTAUTH_SECRET="jnnxycv32"
