--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-DB_URL="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southeast-1.aws.neon.tech/n?sslmode=require"
+DB_URL1="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southeast-1.aws.neon.tech/m?sslmode=require"
 
 
 
