--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@remixicon/react": "^4.2.0",
     "@tailwindcss/typography": "^0.5.13",
     "@tremor/react": "^3.14.1",
@@ -47,6 +48,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
