--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@tremor/react": "^3.14.1",
     "@types/node": "20.2.4",
-    "@types/react": "18.2.7",
+    "@types/react": "^18.2.25",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.3",
