--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@remixicon/react": "^4.2.0",
     "@tailwindcss/typography": "^0.5.13",
     "@tremor/react": "^3.14.1",
@@ -26,7 +34,7 @@
     "clsx": "^2.1.1",
     "concurrently": "^8.0.1",
     "cookies-next": "^4.2.1",
-    "embla-carousel-react": "^8.1.8",
+    "embla-carousel-react": "^8.2.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.331.0",
@@ -43,7 +51,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
