updated apis and middleware

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 DB_URL1="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm?sslmode=require"
+
+
+NEXTAUTH_URL = http://localhost:3000/authorization/api/auth
+
+NEXTAUTH_SECRET="jnnxycv32"
+
+ACCESS_LOGIN_URL = "http://localhost:3000"
