--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.2",
