--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-DB_URL="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm1?sslmode=require"
+# DB_URL="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm1?sslmode=require"
 
 # DB_URL1="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southeast-1.aws.neon.tech/msg?sslmode=require"
 
+DB_URL2="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southeast-1.aws.neon.tech/mlm?sslmode=require"
 
 
 NEXTAUTH_URL = "http://localhost:3000/api/auth"
