--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_URL1="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm?sslmode=require"
+DB_URL="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm1?sslmode=require"
 
 
 NEXTAUTH_URL = http://localhost:3000/authorization/api/auth
