--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_URL="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm4?sslmode=require"
+DB_URL1="postgresql://mubeenamin:5GmZ4VBHMLnj@ep-round-tooth-a125h1qe.ap-southeast-1.aws.neon.tech/mlm5?sslmode=require"
 
 # DB_URL1="postgresql://Waheedsadique:fdKbX2OCp6eT@ep-hidden-truth-549316.ap-southeast-1.aws.neon.tech/msg?sslmode=require"
 
