--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,5 @@
       "dest": "index.py"
     }
   ],
-  "cron": [
-    { "schedule": "0 0 * * *", "destination": "/api/routers/dailyupdate" }
-  ]
+  "cron": "0 0 * * *"
 }
