--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -24,6 +25,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@remixicon/react": "^4.2.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-table": "^8.21.2",
     "@tremor/react": "^3.14.1",
     "@types/node": "20.2.4",
     "@types/react": "^18.2.25",
